feat: implement DashboardScreen

--- a/thermal-comfort-app-app/src/main/resources/application-dev.yml
+++ b/thermal-comfort-app-app/src/main/resources/application-dev.yml
@@ -28,6 +28,8 @@ thread:
 
 # 数据库配置；启动时配置数据库资源信息
 spring:
+  jackson:
+    property-naming-strategy: SNAKE_CASE
   datasource:
     url: jdbc:postgresql://localhost:5432/thermal_comfort
     username: postgres
