WIP: getFeedback interface

--- a/docs/dev-ops/docker-compose-app.yml
+++ b/docs/dev-ops/docker-compose-app.yml
@@ -1,7 +1,7 @@
 # /usr/local/bin/docker-compose -f /docs/dev-ops/environment/environment-docker-compose-2.4.yml up -d
 version: '3.8'
 # docker-compose -f docker-compose-app.yml up -d
-# 你需要修改system为你自身系统的仓库名
+# need to change system to your own system's repository name undesirable
 services:
   thermal-comfort-app:
     image: system/thermal-comfort-app:1.0-SNAPSHOT
