fix: Dockerfile + finalName + aliyun mirror

--- a/thermal-comfort-app-app/pom.xml
+++ b/thermal-comfort-app-app/pom.xml
@@ -53,7 +53,7 @@
     </dependencies>
 
     <build>
-        <finalName>thermal-comfort-app-app</finalName>
+        <finalName>thermal-comfort-app</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
