--- a/pom.xml
+++ b/pom.xml
@@ -59,13 +59,6 @@
                 <version>42.6.0</version>
             </dependency>
 
-            <!-- Springdoc (Swagger/OpenAPI) -->
-            <dependency>
-                <groupId>org.springdoc</groupId>
-                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-                <version>2.1.0</version>
-            </dependency>
-
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-tx</artifactId>
@@ -125,11 +118,11 @@
             </dependency>
 
             <!-- Redis -->
-            <dependency>
-                <groupId>org.redisson</groupId>
-                <artifactId>redisson-spring-boot-starter</artifactId>
-                <version>3.23.4</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.redisson</groupId>-->
+<!--                <artifactId>redisson-spring-boot-starter</artifactId>-->
+<!--                <version>3.23.4</version>-->
+<!--            </dependency>-->
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -161,13 +154,6 @@
                 <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
                 <version>0.11.2</version>
                 <scope>runtime</scope>
-            </dependency>
-
-            <!-- Java Mail -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-mail</artifactId>
-                <version>3.5.3</version>
             </dependency>
 
             <!-- 工程模块 -->
