deploy: application.yml

--- a/thermal-comfort-app-app/src/main/resources/application-prod.yml
+++ b/thermal-comfort-app-app/src/main/resources/application-prod.yml
@@ -17,9 +17,9 @@ app:
 
 spring:
   datasource:
-    url: ${SPRING_DATASOURCE_URL}
-    username: ${SPRING_DATASOURCE_USERNAME}
-    password: ${SPRING_DATASOURCE_PASSWORD}
+    url: jdbc:postgresql://postgres:fqlqfHXnIqiGiMRSCrLwuNyNjxwqqfkt@postgres.railway.internal:5432/railway
+    username: postgres
+    password: ${{POSTGRES_PASSWORD}}}
     driver-class-name: org.postgresql.Driver
   hikari:
     pool-name: Railway_HikariCP
