--- a/thermal-comfort-app-app/src/main/resources/application-prod.yml
+++ b/thermal-comfort-app-app/src/main/resources/application-prod.yml
@@ -17,9 +17,9 @@ app:
 
 spring:
   datasource:
-    url: jdbc:postgresql://postgres:fqlqfHXnIqiGiMRSCrLwuNyNjxwqqfkt@postgres.railway.internal:5432/railway
-    username: postgres
-    password: ${{POSTGRES_PASSWORD}}}
+    url: jdbc:postgresql://${PROD_DB_HOST}:${PROD_DO_PORT}/${PROD_DB_NAME}
+    username: ${PROD_DB_USERNAME}
+    password: ${PROD_DB_PASSWORD}}
     driver-class-name: org.postgresql.Driver
   hikari:
     pool-name: Railway_HikariCP
