--- a/thermal-comfort-app-app/src/main/resources/application-prod.yml
+++ b/thermal-comfort-app-app/src/main/resources/application-prod.yml
@@ -17,7 +17,7 @@ app:
 
 spring:
   datasource:
-    url: jdbc:postgresql://${PROD_DB_HOST}:${PROD_DO_PORT}/${PROD_DB_NAME}
+    url: jdbc:postgresql://${PROD_DB_HOST}:${PROD_DB_PORT}/${PROD_DB_NAME}
     username: ${PROD_DB_USERNAME}
     password: ${PROD_DB_PASSWORD}}
     driver-class-name: org.postgresql.Driver
